serviceworker whole site er

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       // Registering the Service Worker
       if('serviceWorker' in navigator){
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./serviceworker2.js')
+          navigator.serviceWorker.register('./serviceworker-wholesite.js')
           .then((reg) => console.log('Success', reg.scope))
           .catch((err) => console.log('Failure', err))
         })
