--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script>
+    <script>
       // Registering the Service Worker
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -129,7 +129,7 @@
           });
         }
       }
-    </script> -->
+    </script>
     <!-- <script src="../src/firebase.js"></script> -->
   </body>
 </html>
