--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta name="description" content="Modern SoC Journal PWA App" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>SoC-J</title>
+    <title>Reflect</title>
   </head>
   <body>
     <div id="root"></div>
