--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
           });
         }
       }
-      reminderNotification();
+      // reminderNotification();
 
       function hackerthonNotification() {
         if (Notification.permission == 'granted') {
@@ -123,7 +123,7 @@
           });
         }
       }
-      hackerthonNotification();
+      // hackerthonNotification();
 
       function youOkNotification() {
         if (Notification.permission == 'granted') {
@@ -160,7 +160,7 @@
           });
         }
       }
-      youOkNotification();
+      // youOkNotification();
 
       function goodLuckNotification() {
         if (Notification.permission == 'granted') {
@@ -180,7 +180,7 @@
               // Optional - Add actions to the notification.  One to go to journal and the other to close notification.
               actions: [
                 {
-                  action: 'email',
+                  action: 'Login to journal',
                   title: 'Message Coach',
                   icon:
                     'https://webstockreview.net/images/check-mark-icon-png-3.png',
@@ -197,7 +197,7 @@
           });
         }
       }
-      goodLuckNotification();
+      // goodLuckNotification();
 
       // Subscribing to Push Notifications
       // check if we already have a subscription object and update the UI accordingly
