--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
           navigator.serviceWorker.getRegistration().then(function (reg) {
             // Adding notification options - images, text etc
             var options = {
-              body: `Hi there, it looks like you have had a tough few of days.  We hope you're ok.  Let's get you booked in for a chat with one of the coaches.`,
+              body: `Hi there, it looks like you have had a few tough days.  We hope you're ok.  Let's get you booked in for a chat with one of the coaches.`,
               icon:
                 'https://d33wubrfki0l68.cloudfront.net/e6fddcbea146f91d2f3c160f7d56a9391a4740b0/4e758/static/logo-51c754388b198e5bbb0d08a971ebbfa2.png',
               // vibrate: [100, 50, 100],
