switching notifications off

--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
           });
         }
       }
-      hackerthonNotification();
+      // hackerthonNotification();
 
       function youOkNotification() {
         if (Notification.permission == 'granted') {
@@ -163,7 +163,7 @@
           });
         }
       }
-      youOkNotification();
+      // youOkNotification();
 
       function goodLuckNotification() {
         if (Notification.permission == 'granted') {
@@ -201,7 +201,7 @@
           });
         }
       }
-      goodLuckNotification();
+      // goodLuckNotification();
 
       // Subscribing to Push Notifications
       // check if we already have a subscription object and update the UI accordingly
