--- a/public/index.html
+++ b/public/index.html
@@ -204,51 +204,51 @@
       // }
       // // goodLuckNotification();
 
-      // // Subscribing to Push Notifications
-      // // check if we already have a subscription object and update the UI accordingly
-      // if ('serviceWorker' in navigator) {
-      //   navigator.serviceWorker
-      //     .register('./serviceworker-wholesite.js')
-      //     .then(function (reg) {
-      //       console.log('Service Worker Registered!', reg);
+      // Subscribing to Push Notifications
+      // check if we already have a subscription object and update the UI accordingly
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('./serviceworker-wholesite.js')
+          .then(function (reg) {
+            console.log('Service Worker Registered!', reg);
 
-      //       reg.pushManager.getSubscription().then(function (sub) {
-      //         if (sub === null) {
-      //           // Update UI to ask user to register for Push - need to finish this bit!!!!!
-      //           console.log('Not subscribed to push service!');
-      //         } else {
-      //           // We have a subscription, update the database - need to finish this bit!!!!!
-      //           console.log('Subscription object: ', sub);
-      //         }
-      //       });
-      //     })
-      //     .catch(function (err) {
-      //       console.log('Service Worker registration failed: ', err);
-      //     });
-      // }
+            reg.pushManager.getSubscription().then(function (sub) {
+              if (sub === null) {
+                // Update UI to ask user to register for Push - need to finish this bit!!!!!
+                console.log('Not subscribed to push service!');
+              } else {
+                // We have a subscription, update the database - need to finish this bit!!!!!
+                console.log('Subscription object: ', sub);
+              }
+            });
+          })
+          .catch(function (err) {
+            console.log('Service Worker registration failed: ', err);
+          });
+      }
 
-      // // Subscribe user to the push service...
-      // // It's best practice to call the subscribeUser() function in response to a user action signalling they would like to subscribe to push messages from our app.  Don't forget to add in this step once everything is set up.
-      // function subscribeUser() {
-      //   if ('serviceWorker' in navigator) {
-      //     navigator.serviceWorker.ready.then(function (reg) {
-      //       reg.pushManager
-      //         .subscribe({
-      //           userVisibleOnly: true,
-      //         })
-      //         .then(function (sub) {
-      //           console.log('Endpoint URL: ', sub.endpoint);
-      //         })
-      //         .catch(function (e) {
-      //           if (Notification.permission === 'denied') {
-      //             console.warn('Permission for notifications was denied');
-      //           } else {
-      //             console.error('Unable to subscribe to push', e);
-      //           }
-      //         });
-      //     });
-      //   }
-      // }
+      // Subscribe user to the push service...
+      // It's best practice to call the subscribeUser() function in response to a user action signalling they would like to subscribe to push messages from our app.  Don't forget to add in this step once everything is set up.
+      function subscribeUser() {
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.ready.then(function (reg) {
+            reg.pushManager
+              .subscribe({
+                userVisibleOnly: true,
+              })
+              .then(function (sub) {
+                console.log('Endpoint URL: ', sub.endpoint);
+              })
+              .catch(function (e) {
+                if (Notification.permission === 'denied') {
+                  console.warn('Permission for notifications was denied');
+                } else {
+                  console.error('Unable to subscribe to push', e);
+                }
+              });
+          });
+        }
+      }
     </script>
   </body>
 </html>
